--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -50,8 +50,7 @@
 }
 .lista-produtos {
   display: flex;
-flex-wrap: wrap;
-  
+  flex-wrap: wrap;
 }
 .lista-produtos .produto {
   display: flex;
@@ -59,8 +58,6 @@ flex-wrap: wrap;
   flex: 1;
   padding: 50px;
   flex-basis: 400px;
-  flex-flow: column ;
-  
 }
 
 .cabecalho {
@@ -954,4 +951,46 @@ body {
 .team-member-info p {
   color: #666;
   margin: 5px 0;
+}
+
+.search-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+#search-bar {
+  padding: 10px;
+  width: 300px;
+  border: 2px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  outline: none;
+  transition: border 0.3s;
+}
+
+#search-bar:focus {
+  border: 2px solid #00b30f;
+}
+
+#search-btn {
+  padding: 10px 20px;
+  background-color: #00b30f;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s;
+}
+
+#search-btn:hover {
+  background-color: #0056b3;
+}
+
+#search-result {
+  margin-top: 20px;
+  font-size: 18px;
+  color: #333;
 }/*# sourceMappingURL=styles.css.map */
