--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,3 +1,4 @@
+@import "mixins";
 @import "menu";
 @import "blocos";
 @import "produtos";
@@ -8,3 +9,4 @@
 @import "comprar";
 @import "joinville";
 @import "barradepesquisa";
+@import "pagamento";
