--- a/assets/css/_barradepesquisa.scss
+++ b/assets/css/_barradepesquisa.scss
@@ -10,20 +10,21 @@
 #search-bar {
     padding: 10px;
     width: 300px;
-    border: 2px solid #ccc;
+    border: 2px solid #f57636;
     border-radius: 5px;
     font-size: 16px;
     outline: none;
     transition: border 0.3s;
+    color: #f57636;
 }
 
 #search-bar:focus {
-    border: 2px solid #00b30f;
+    border: 2px solid #f57636;
 }
 
 #search-btn {
     padding: 10px 20px;
-    background-color: #00b30f;
+    background-color: #f57636;
     color: white;
     border: none;
     border-radius: 5px;
@@ -33,11 +34,11 @@
 }
 
 #search-btn:hover {
-    background-color: #0056b3;
+    background-color: #ac3900;
 }
 
 #search-result {
     margin-top: 20px;
     font-size: 18px;
-    color: #333;
+    color: #f57636;
 }
