--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -1,7 +1,10 @@
-
+*{
+  padding: 0;
+  margin: 0;
+}
 .cabecalho {
   width: 100%;
-  background-color: yellow;
+  background-color: #265697;
   display: flex;
   justify-content: space-around;
   align-items: first baseline;
@@ -14,13 +17,24 @@
   font-family: sans-serif;
 
   .logo-texto {
-    color: black;
+    color: #f57636;
     font-size: x-large;
     font-display: center;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-style: italic;
+    display: flex;
+    flex-direction: row;
   }
 }
+.imglogon{
+  display: flex;
+  align-items: end;
+div{
+  display: flex;
+  align-items: end;
+}
 
+}
 .menu li {
   display: inline-block;
   margin: 0 10px;
@@ -29,8 +43,10 @@
 .menu li a {
   font-size: 24px;
   text-decoration: none;
-  color: black;
+  color: #f57636;
   text-transform: uppercase;
+  font-family:Impact,'Arial Narrow Bold', sans-serif;
+  font-style: oblique;
   padding: 10px 15px;
 }
 
@@ -41,7 +57,7 @@
 
 .produto>.botao-comprar {
   display: inline-block;
-  background-color: #00b30f;
+  background-color: #265697;
   color: white;
   padding: 10px 20px;
   text-align: center;
@@ -58,17 +74,16 @@
   }
 
   &:hover {
-    background-color: #ebfc00;
+    background-color: #f57636;
   }
 
   a {
     text-decoration: none;
     font-style: bold;
     font-size: larger;
-    color: black;
+    color: white;
   }
 }
-
 * {
   margin: 0;
   padding: 0;
