--- a/assets/css/_sobre.scss
+++ b/assets/css/_sobre.scss
@@ -8,7 +8,7 @@
 .about {
   width: 100%;
   padding: 78px 0px;
-  background-color: #191919;
+  background-image: url('assets');
 
 }
 
@@ -58,7 +58,7 @@
 }
 
 .about-text .buttona {
-  background: yellow;
+  background: #265697;
   color: black;
   text-decoration: none;
   border: 2px solid transparent;
