--- a/assets/css/_barradepesquisa.scss
+++ b/assets/css/_barradepesquisa.scss
@@ -15,7 +15,7 @@
     font-size: 16px;
     outline: none;
     transition: border 0.3s;
-    color: #f57636;
+    color: black;
 }
 
 #search-bar:focus {
