--- a/assets/css/_carrinho.scss
+++ b/assets/css/_carrinho.scss
@@ -5,16 +5,14 @@
 
 body {
   background: #f6f6f6;
-  font-family: 'Lato', sans-serif;
+  color: black;
 }
 
 body > header {
-  background: #111;
+  background: black;
   color: white;
   font-size: 24px;
   padding: 20px 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -27,9 +25,11 @@ body > main {
 }
 
 body > main .page-title {
-  font-size: 40px;
+  font-size: 60px;
   padding: 50px 0;
   text-align: center;
+  font-family: fantasy;
+  color: #f57636;
 }
 
 body > main .content {
@@ -183,6 +183,9 @@ aside .box header {
   padding: 15px 20px;
   font-size: 18px;
   border-bottom: 1px solid #ccc;
+  color:#f57636;
+  font-style: oblique;
+  font-family:fantasy
 }
 
 aside .box .info {
@@ -206,7 +209,7 @@ aside .box .info > div:last-child {
 }
 
 aside .box .info button {
-  color: #28a745;
+  color:  #f57636;
   background: transparent;
   border: 0;
   display: -webkit-box;
