--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -1,7 +1,8 @@
-*{
+* {
   padding: 0;
   margin: 0;
 }
+
 .cabecalho {
   width: 100%;
   background-color: #265697;
@@ -20,21 +21,20 @@
     color: #f57636;
     font-size: x-large;
     font-display: center;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-style: italic;
     display: flex;
     flex-direction: row;
+
+    .logo-texto a {
+      display: flex;
+      transition: ease-out;
+      transition-duration: 3s;  
+      transition-property: all;
+    }
   }
 }
-.imglogon{
-  display: flex;
-  align-items: end;
-div{
-  display: flex;
-  align-items: end;
-}
 
-}
 .menu li {
   display: inline-block;
   margin: 0 10px;
@@ -45,7 +45,7 @@ div{
   text-decoration: none;
   color: #f57636;
   text-transform: uppercase;
-  font-family:Impact,'Arial Narrow Bold', sans-serif;
+  font-family: Impact, 'Arial Narrow Bold', sans-serif;
   font-style: oblique;
   padding: 10px 15px;
 }
@@ -71,6 +71,8 @@ div{
   a {
     width: 100%;
     display: block;
+    transition: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    transition-duration: 2s;
   }
 
   &:hover {
@@ -84,6 +86,7 @@ div{
     color: white;
   }
 }
+
 * {
   margin: 0;
   padding: 0;
@@ -96,7 +99,6 @@ body.wrapper {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-image: url('../images/Fundo1.jpg');
   background-size: 1000px;
   background-position: center;
 
@@ -105,7 +107,7 @@ body.wrapper {
   .wrapper {
     width: 420px;
     background: transparent;
-    color: white;
+    color: #f57636;
     border-radius: 10px;
     padding: 30px 40px;
   }
@@ -132,12 +134,12 @@ body.wrapper {
     border: 2px solid rgba(255, 255, 255, .2);
     border-radius: 40px;
     font-size: 16px;
-    color: #fff;
+    color: #f57636;
     padding: 20px 45px 20px 20px;
   }
 
   .input-box input::placeholder {
-    color: #fff;
+    color: #f57636;
   }
 
   .input-box i {
@@ -156,7 +158,7 @@ body.wrapper {
   }
 
   .remember-forgot label input {
-    accent-color: #fff;
+    accent-color: #f57636;
     margin-right: 3px;
   }
 
