--- a/assets/css/_login.scss
+++ b/assets/css/_login.scss
@@ -9,7 +9,7 @@
 }
 body.com-fundo1 {
     
-    background-image: url(./../images/Fundo1.jpg) !important;
+    background-image: url(../images/layout/Leonardo_Lightning_XL_Create_a_wallpaper_for_a_volleyball_stor_1.jpg) !important;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -30,14 +30,25 @@ body.com-fundo1 {
     width: 100%;
     height: 100px;
     line-height: 100px;
-    background: yellow;
+    background: #265697;
     z-index: 100;
 }
-.nav-logo p{
-    color: black;
+.nav-logo h1{
+    color: #f57636;
     font-size: 40px;
     font-weight: 600;
+    font-family: sans-serif;  display: flex;
+    align-items: center;
     font-family: sans-serif;
+  
+    .logo-texto {
+      color: #f57636;
+      font-size: x-large;
+      font-display: center;
+      font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      display: flex;
+      flex-direction: row;
+    }
 }
 .nav-menu ul{
     display: flex;
@@ -48,12 +59,12 @@ body.com-fundo1 {
 .nav-menu ul li .link{
     text-decoration: none;
     font-weight: 500;
-    color: black;
+    color: #f57636;
     padding-bottom: 15px;
     margin: 0 25px;
 }
 .link:hover, .active{
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid #f57636;
 }
 .nav-button .btn{
     width: 130px;
@@ -90,7 +101,7 @@ body.com-fundo1 {
     height: 500px;
     overflow: hidden;
     z-index: 2;
-    border: 2px solid black;
+    border: 2px solid white;
     border-radius: 5%;
     
     
@@ -113,7 +124,7 @@ body.com-fundo1 {
     transition: .5s ease-in-out;
 }
 .top span{
-    color: black;
+    color: white;
     font-size: small;
     padding: 10px 0;
     display: flex;
@@ -121,14 +132,16 @@ body.com-fundo1 {
 }
 .top span a{
     font-weight: 500;
-    color: black;
+    color: #f57636;
     margin-left: 5px;
 }
 header{
-    color: black;
-    font-size: 30px;
+    color: white;
+    font-size: 35px;
     text-align: center;
     padding: 10px 0 30px 0;
+    font-style: oblique;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 .two-forms{
     display: flex;
@@ -137,7 +150,7 @@ header{
 .input-field{
     font-size: 15px;
     background: rgba(255, 255, 255, 0.2);
-    color: black;
+    color: white;
     height: 50px;
     width: 100%;
     padding: 0 10px 0 45px;
@@ -150,13 +163,13 @@ header{
     background: rgba(255, 255, 255, 0.25);
 }
 ::-webkit-input-placeholder{
-    color: black;
+    color: white;
 }
 .input-box i{
     position: relative;
     top: -35px;
     left: 17px;
-    color: black;
+    color: white;
 }
 .submit{
     font-size: 15px;
@@ -178,7 +191,7 @@ header{
 .two-col{
     display: flex;
     justify-content: space-between;
-    color: black;
+    color: white;
     font-size: small;
     margin-top: 10px;
 }
@@ -188,7 +201,7 @@ header{
 }
 .two label a{
     text-decoration: none;
-    color: black;
+    color: white;
 }
 .two label a:hover{
     text-decoration: underline;
