--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -89,14 +89,11 @@
   display: flex;
   flex-direction: row;
 }
-
-.imglogon {
+.container-logo .logo-texto .logo-texto a {
   display: flex;
-  align-items: end;
-}
-.imglogon div {
-  display: flex;
-  align-items: end;
+  transition: ease-out;
+  transition-duration: 3s;
+  transition-property: all;
 }
 
 .menu li {
@@ -135,6 +132,8 @@
 .produto > .botao-comprar a {
   width: 100%;
   display: block;
+  transition: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transition-duration: 2s;
 }
 .produto > .botao-comprar:hover {
   background-color: #f57636;
@@ -158,14 +157,13 @@ body.wrapper {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-image: url("../images/Fundo1.jpg");
   background-size: 1000px;
   background-position: center;
 }
 body.wrapper .wrapper {
   width: 420px;
   background: transparent;
-  color: white;
+  color: #f57636;
   border-radius: 10px;
   padding: 30px 40px;
 }
@@ -188,14 +186,14 @@ body.wrapper .input-box input {
   border: 2px solid rgba(255, 255, 255, 0.2);
   border-radius: 40px;
   font-size: 16px;
-  color: #fff;
+  color: #f57636;
   padding: 20px 45px 20px 20px;
 }
 body.wrapper .input-box input::-moz-placeholder {
-  color: #fff;
+  color: #f57636;
 }
 body.wrapper .input-box input::placeholder {
-  color: #fff;
+  color: #f57636;
 }
 body.wrapper .input-box i {
   position: absolute;
@@ -211,7 +209,7 @@ body.wrapper .wrapper .remember-forgot {
   margin: -15px 0 15px;
 }
 body.wrapper .remember-forgot label input {
-  accent-color: #fff;
+  accent-color: #f57636;
   margin-right: 3px;
 }
 body.wrapper .remember-forgot a {
@@ -258,7 +256,7 @@ body.wrapper .register-link p a:hover {
 .about {
   width: 100%;
   padding: 78px 0px;
-  background-color: #191919;
+  background-image: url("assets");
 }
 
 .about img {
@@ -307,7 +305,7 @@ body.wrapper .register-link p a:hover {
 }
 
 .about-text .buttona {
-  background: yellow;
+  background: #265697;
   color: black;
   text-decoration: none;
   border: 2px solid transparent;
@@ -338,7 +336,7 @@ body.sobre {
 }
 
 body.com-fundo1 {
-  background-image: url(./../images/Fundo1.jpg) !important;
+  background-image: url(../images/layout/Leonardo_Lightning_XL_Create_a_wallpaper_for_a_volleyball_stor_1.jpg) !important;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -360,15 +358,26 @@ body.com-fundo1 {
   width: 100%;
   height: 100px;
   line-height: 100px;
-  background: yellow;
+  background: #265697;
   z-index: 100;
 }
 
-.nav-logo p {
-  color: black;
+.nav-logo h1 {
+  color: #f57636;
   font-size: 40px;
   font-weight: 600;
   font-family: sans-serif;
+  display: flex;
+  align-items: center;
+  font-family: sans-serif;
+}
+.nav-logo h1 .logo-texto {
+  color: #f57636;
+  font-size: x-large;
+  font-display: center;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  display: flex;
+  flex-direction: row;
 }
 
 .nav-menu ul {
@@ -382,13 +391,13 @@ body.com-fundo1 {
 .nav-menu ul li .link {
   text-decoration: none;
   font-weight: 500;
-  color: black;
+  color: #f57636;
   padding-bottom: 15px;
   margin: 0 25px;
 }
 
 .link:hover, .active {
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid #f57636;
 }
 
 .nav-button .btn {
@@ -433,7 +442,7 @@ body.com-fundo1 {
   height: 500px;
   overflow: hidden;
   z-index: 2;
-  border: 2px solid black;
+  border: 2px solid white;
   border-radius: 5%;
 }
 
@@ -457,7 +466,7 @@ body.com-fundo1 {
 }
 
 .top span {
-  color: black;
+  color: white;
   font-size: small;
   padding: 10px 0;
   display: flex;
@@ -466,15 +475,17 @@ body.com-fundo1 {
 
 .top span a {
   font-weight: 500;
-  color: black;
+  color: #f57636;
   margin-left: 5px;
 }
 
 header {
-  color: black;
-  font-size: 30px;
+  color: white;
+  font-size: 35px;
   text-align: center;
   padding: 10px 0 30px 0;
+  font-style: oblique;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 
 .two-forms {
@@ -485,7 +496,7 @@ header {
 .input-field {
   font-size: 15px;
   background: rgba(255, 255, 255, 0.2);
-  color: black;
+  color: white;
   height: 50px;
   width: 100%;
   padding: 0 10px 0 45px;
@@ -500,14 +511,14 @@ header {
 }
 
 ::-webkit-input-placeholder {
-  color: black;
+  color: white;
 }
 
 .input-box i {
   position: relative;
   top: -35px;
   left: 17px;
-  color: black;
+  color: white;
 }
 
 .submit {
@@ -532,7 +543,7 @@ header {
 .two-col {
   display: flex;
   justify-content: space-between;
-  color: black;
+  color: white;
   font-size: small;
   margin-top: 10px;
 }
@@ -544,7 +555,7 @@ header {
 
 .two label a {
   text-decoration: none;
-  color: black;
+  color: white;
 }
 
 .two label a:hover {
@@ -614,11 +625,11 @@ header {
 
 body {
   background: #f6f6f6;
-  font-family: "Lato", sans-serif;
+  color: black;
 }
 
 body > header {
-  background: #111;
+  background: black;
   color: white;
   font-size: 24px;
   padding: 20px 0;
@@ -632,9 +643,11 @@ body > main {
 }
 
 body > main .page-title {
-  font-size: 40px;
+  font-size: 60px;
   padding: 50px 0;
   text-align: center;
+  font-family: fantasy;
+  color: #f57636;
 }
 
 body > main .content {
@@ -765,6 +778,9 @@ aside .box header {
   padding: 15px 20px;
   font-size: 18px;
   border-bottom: 1px solid #ccc;
+  color: #f57636;
+  font-style: oblique;
+  font-family: fantasy;
 }
 
 aside .box .info {
@@ -784,7 +800,7 @@ aside .box .info > div:last-child {
 }
 
 aside .box .info button {
-  color: #28a745;
+  color: #f57636;
   background: transparent;
   border: 0;
   display: flex;
@@ -988,7 +1004,7 @@ body {
   font-size: 16px;
   outline: none;
   transition: border 0.3s;
-  color: #f57636;
+  color: black;
 }
 
 #search-bar:focus {
@@ -1033,7 +1049,7 @@ body {
   align-items: center;
   padding: 25px;
   min-height: 100vh;
-  background: linear-gradient(90deg, #2ecc71 60%, #27ae60 40.1%);
+  background: linear-gradient(90deg, #265697 60%, #f57636 40.1%);
 }
 
 .container15 form {
