--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -10,6 +10,7 @@
   justify-content: space-around;
   align-items: first baseline;
   padding: 20px 0;
+  font-family: fantasy;
 }
 
 .container-logo {
@@ -21,7 +22,7 @@
     color: #f57636;
     font-size: x-large;
     font-display: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: fantasy;
     font-style: italic;
     display: flex;
     flex-direction: row;
