--- a/assets/css/_sobre.scss
+++ b/assets/css/_sobre.scss
@@ -7,42 +7,42 @@
 
 .about {
   width: 100%;
-  padding: 78px 0px;
-  background-image: url('assets');
-
-}
-
-.about img {
-  height: auto;
-  width: 420px;
+  display: flex;
+  justify-content: center;
 }
 
 .about-text {
-  width: 550px;
+  width: 100%;
+  align-items: center;
 }
 
 .main {
-  width: 1130px;
-  max-width: 95%;
+  width: 1400px;
+  height: 1400px;
+  height: 100%;
+  max-width: 100%;
   margin: 0 auto;
   display: flex;
+  justify-content: center;
   align-items: center;
-  justify-content: space-around;
 }
 
 .about-text h1 {
-  color: white;
+  color: #f57636;
   font-size: 80px;
   text-transform: capitalize;
   margin-bottom: 20px;
+  font-family: fantasy;
+  display: flex;
+  align-content: center;
 }
 
 .about-text h5 {
   color: white;
   font-size: 25px;
   text-transform: capitalize;
-  margin-bottom: 25px;
-  letter-spacing: 2px;
+  margin-bottom: 50px;
+  letter-spacing: 3px;
 }
 
 .about-text span {
@@ -53,25 +53,23 @@
   color: white;
   letter-spacing: 1px;
   line-height: 28px;
-  font-size: 18px;
+  font-size: 20px;
   margin-bottom: 45px;
 }
 
 .about-text .buttona {
   background: #265697;
-  color: black;
+  color: #f57636;
   text-decoration: none;
   border: 2px solid transparent;
   font-weight: bold;
-  padding: 13px 30px;
-  border-radius: 30px;
+  padding: 10px 200px;
+  border-radius: 200px;
   transition: .4s;
-
-
-
+  font-size: 30px;
 
   &:hover {
-    font-size: 30px;
+    font-size: 40px;
   }
 
 }
@@ -80,5 +78,12 @@ body.sobre {
 }
 .about-text .buttona a{
   text-decoration: none;
-  color: black;
+  color: #f57636;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.movi{
+  display: flex;
+  justify-content: center;
 }
