--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -73,6 +73,7 @@
   justify-content: space-around;
   align-items: first baseline;
   padding: 20px 0;
+  font-family: fantasy;
 }
 
 .container-logo {
@@ -84,7 +85,7 @@
   color: #f57636;
   font-size: x-large;
   font-display: center;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-family: fantasy;
   font-style: italic;
   display: flex;
   flex-direction: row;
@@ -255,41 +256,42 @@ body.wrapper .register-link p a:hover {
 
 .about {
   width: 100%;
-  padding: 78px 0px;
-  background-image: url("assets");
-}
-
-.about img {
-  height: auto;
-  width: 420px;
+  display: flex;
+  justify-content: center;
 }
 
 .about-text {
-  width: 550px;
+  width: 100%;
+  align-items: center;
 }
 
 .main {
-  width: 1130px;
-  max-width: 95%;
+  width: 1400px;
+  height: 1400px;
+  height: 100%;
+  max-width: 100%;
   margin: 0 auto;
   display: flex;
+  justify-content: center;
   align-items: center;
-  justify-content: space-around;
 }
 
 .about-text h1 {
-  color: white;
+  color: #f57636;
   font-size: 80px;
   text-transform: capitalize;
   margin-bottom: 20px;
+  font-family: fantasy;
+  display: flex;
+  align-content: center;
 }
 
 .about-text h5 {
   color: white;
   font-size: 25px;
   text-transform: capitalize;
-  margin-bottom: 25px;
-  letter-spacing: 2px;
+  margin-bottom: 50px;
+  letter-spacing: 3px;
 }
 
 .about-text span {
@@ -300,22 +302,23 @@ body.wrapper .register-link p a:hover {
   color: white;
   letter-spacing: 1px;
   line-height: 28px;
-  font-size: 18px;
+  font-size: 20px;
   margin-bottom: 45px;
 }
 
 .about-text .buttona {
   background: #265697;
-  color: black;
+  color: #f57636;
   text-decoration: none;
   border: 2px solid transparent;
   font-weight: bold;
-  padding: 13px 30px;
-  border-radius: 30px;
+  padding: 10px 200px;
+  border-radius: 200px;
   transition: 0.4s;
+  font-size: 30px;
 }
 .about-text .buttona:hover {
-  font-size: 30px;
+  font-size: 40px;
 }
 
 body.sobre {
@@ -324,7 +327,15 @@ body.sobre {
 
 .about-text .buttona a {
   text-decoration: none;
-  color: black;
+  color: #f57636;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.movi {
+  display: flex;
+  justify-content: center;
 }
 
 /* POPPINS FONT */
